--- a/fashion-final-project/src/Components/PickUpDesign.css
+++ b/fashion-final-project/src/Components/PickUpDesign.css
@@ -29,9 +29,9 @@ body {
 .our_design_box:hover,
 .your_design_box:hover,
 .pick_up_design_button:hover {
-    -moz-box-shadow: 0 0 15px #707070;
-      -webkit-box-shadow: 0 0 15px #707070;
-      box-shadow: 0 0 10px #707070;
+  -moz-box-shadow: 0 0 15px #707070;
+  -webkit-box-shadow: 0 0 15px #707070;
+  box-shadow: 0 0 10px #707070;
 }
 
 .our_design_box {
@@ -75,23 +75,35 @@ hr {
   border: #fd393a 2px dashed;
 }
 
+.center_detail_scissor {
+  background-image: url("./Images/scissors.png");
+  width: 100px;
+  height: 120px;
+  position: absolute;
+  z-index: 1;
+  background-repeat: no-repeat;
+  margin-right: 5px;
+}
+
 .outside_container_left {
-    background-image: url('./Images/sewing_pillow_bg.png');
-    background-repeat: no-repeat;
-    width: 150px;
-    height: 150px;
-    display: flex;
-    margin-left: 20px;
+  background-image: url("./Images/sewing_pillow_bg.png");
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  z-index: 1;
+  margin-top: 400px;
+  margin-right: 1080px;
 }
 
 .outside_container_right {
-    background-image: url('./Images/needle_buttons_bg.png');
-    background-repeat: no-repeat;
-    width: 150px;
-    height: 150px;
-    display: flex;
-    align-self: flex-start;
-    margin-right: 20px;
+  background-image: url("./Images/needle_buttons_bg.png");
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-self: flex-start;
+  margin-right: 20px;
 }
 
 /* Media queries bellow */
@@ -122,6 +134,9 @@ hr {
     height: 50vh;
     border: #fd393a 2px dashed;
   }
+  .outside_container_left {
+    display: none;
+  }
 }
 
 /* Large */
@@ -150,6 +165,10 @@ hr {
     height: 70vh;
     border: #fd393a 2px dashed;
   }
+  .outside_container_left {
+    margin-top: 400px;
+    margin-right: 700px;
+  }
 }
 
 /* Extra large */
@@ -176,5 +195,9 @@ hr {
   hr {
     height: 80vh;
     border: #fd393a 2px dashed;
+  }
+  .outside_container_left {
+    margin-top: 400px;
+    margin-right: 800px;
   }
 }
