--- a/fashion-final-project/src/Components/Navigation/Navigation.css
+++ b/fashion-final-project/src/Components/Navigation/Navigation.css
@@ -92,7 +92,7 @@
     border-bottom-left-radius: 0;
   }
   .nav-toggle > .navbar-toggler-icon {
-    background-image: url(../Images/BP-icon.png) !important;
+    background-image: url(../Images/BF-icon.png) !important;
   }
   .nav-toggle {
     padding: none;
