--- a/fashion-final-project/src/Components/PickUpDesign/PickUpDesign.css
+++ b/fashion-final-project/src/Components/PickUpDesign/PickUpDesign.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   height: auto;
 }
-
+ 
 .main_design_box {
   width: 80%;
   height: 80vh;
@@ -14,14 +14,14 @@ body {
   border-radius: 5px;
   align-items: center;
 }
-
+ 
 .our_design_box,
 .your_design_box {
   width: 70%;
   height: 65vh;
   display: flex;
 }
-
+ 
 .our_design_box:hover,
 .your_design_box:hover,
 .pick_up_design_button:hover {
@@ -29,25 +29,14 @@ body {
   -webkit-box-shadow: 0 0 15px #707070;
   box-shadow: 0 0 10px #707070;
 }
-
-<<<<<<< HEAD:fashion-final-project/src/Components/PickUpDesign/PickUpDesign.css
-.our_design_box {
-  background-image: url("../Images/sketch_01_small.jpg");
-  background-position: center;
-}
-
-.your_design_box {
-  background-image: url("../Images/sketch_02_small.jpg");
-  background-position: top;
-=======
+ 
 .our_design_box img,
 .your_design_box img {
   width: 100%;
   height: auto;
   border-radius: 5px;
->>>>>>> our_design:fashion-final-project/src/Components/PickUpDesign.css
 }
-
+ 
 .left_container,
 .right_container {
   width: 100%;
@@ -57,7 +46,7 @@ body {
   align-items: center;
   gap: 20px;
 }
-
+ 
 .pick_up_design_button {
   width: 55%;
   height: 5vh;
@@ -73,14 +62,14 @@ body {
   font-family: "Montserrat";
   font-size: 18px;
 }
-
+ 
 hr {
   height: 80vh;
   border: #fd393a 2px dashed;
 }
-
+ 
 .center_detail_scissor {
-  background-image: url("../Images/scissors.png");
+  background-image: url("./../Images/scissors.png");
   width: 100px;
   height: 120px;
   position: absolute;
@@ -88,9 +77,9 @@ hr {
   background-repeat: no-repeat;
   margin-right: 5px;
 }
-
+ 
 .outside_container_left {
-  background-image: url("../Images/sewing_pillow_bg.png");
+  background-image: url("./../Images/sewing_pillow_bg.png");
   background-repeat: no-repeat;
   width: 150px;
   height: 150px;
@@ -99,9 +88,9 @@ hr {
   margin-top: 400px;
   margin-right: 1080px;
 }
-
+ 
 .outside_container_right {
-  background-image: url("../Images/needle_buttons_bg.png");
+  background-image: url("./../Images/needle_buttons_bg.png");
   background-repeat: no-repeat;
   width: 150px;
   height: 150px;
@@ -109,11 +98,11 @@ hr {
   align-self: flex-start;
   margin-right: 20px;
 }
-
+ 
 /* Media queries bellow */
-
+ 
 /* Extra Large */
-
+ 
 @media (min-width: 1401px) {
   .main_design_box {
     width: 80%;
@@ -126,9 +115,9 @@ hr {
     align-items: center;
   }
 }
-
+ 
 /* Large */
-
+ 
 @media (min-width: 1201px) and (max-width: 1400px) {
   .main_design_box {
     width: 80%;
@@ -154,9 +143,9 @@ hr {
   margin-top: 400px;
   margin-right: 980px;
 }
-
+ 
 /* Medium to Large */
-
+ 
 @media (min-width: 768px) and (max-width: 1200px) {
   .main_design_box {
     width: 90%;
@@ -192,7 +181,7 @@ hr {
     display: none;
   }
 }
-
+ 
 /* Below medium */
 @media (max-width: 767px) {
   .main_design_box {
@@ -231,110 +220,3 @@ hr {
     display: none;
   }
 }
-
-/* Medium */
-/* @media (max-width: 767px) {
-  .our_design_box {
-    width: 90%;
-    height: 30vh;
-    
-    padding: auto;
-  }
-  .your_design_box {
-    width: 90%;
-    height: 30vh;
-    
-    padding: auto;
-  }
-  .main_design_box {
-    width: 90%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
-  .pick_up_design_button {
-    width: 85%;
-    height: 5vh;
-    font-size: 10px;
-  }
-  hr {
-    display: none;
-  }
-  .center_detail_scissor {
-    display: none;
-  }
-  .outside_container_left {
-    display: none;
-  }
-  .left_container,
-  .right_container {
-    width: 90%;
-    height: 50%;
-    margin: 5px;
-    
-  }
-  
-} */
-
-/* Large */
-
-/* @media (max-width: 991px) {
-  .our_design_box {
-    width: 95%;
-    height: 60vh;
-    display: flex;
-  }
-  .your_design_box {
-    width: 95%;
-    height: 60vh;
-    display: flex;
-  }
-  .main_design_box {
-    width: 90%;
-    height: 70vh;
-  }
-  .pick_up_design_button {
-    width: 55%;
-    height: 5vh;
-    font-size: 15px;
-  }
-  hr {
-    height: 70vh;
-    border: #fd393a 2px dashed;
-  }
-  .outside_container_left {
-    margin-top: 400px;
-    margin-right: 700px;
-  }
-} */
-
-/* Extra large */
-
-/* @media (max-width: 1400px) {
-  .our_design_box {
-    width: 80%;
-    height: 70vh;
-    display: flex;
-  }
-  .your_design_box {
-    width: 80%;
-    height: 70vh;
-    display: flex;
-  }
-  .main_design_box {
-    width: 70%;
-    height: 80vh;
-  }
-  .pick_up_design_button {
-    width: 55%;
-    height: 5vh;
-  }
-  hr {
-    height: 80vh;
-    border: #fd393a 2px dashed;
-  }
-  .outside_container_left {
-    margin-top: 400px;
-    margin-right: 800px;
-  }
-} */
