--- a/fashion-final-project/src/Components/Reviews/CommentBox.css
+++ b/fashion-final-project/src/Components/Reviews/CommentBox.css
@@ -14,7 +14,7 @@
 
 #comment-reveal {
   float: right;
-  background-color: #5d86bc;
+  background-color: #e7bd44;
   color: #fff;
   border: none;
   border-radius: 0.25rem;
