--- a/fashion-final-project/src/Components/LandingPage/LandingPage.css
+++ b/fashion-final-project/src/Components/LandingPage/LandingPage.css
@@ -10,7 +10,7 @@
 }
 
 .LP-text {
-  color: #ecb19f;
+  color: #ec5e54;
   background-color: rgb(248, 248, 248);
   padding: 6rem 2rem;
   font-family: "Poiret One", "Trebuchet MS", "Lucida Sans Unicode",
