adding responsivness to footer and Magazine Pages

--- a/fashion-final-project/src/Components/MagazinePages/JumpsuitsMagazine.css
+++ b/fashion-final-project/src/Components/MagazinePages/JumpsuitsMagazine.css
@@ -4,8 +4,7 @@
   font-size: 1.5rem;
 }
 .pageImage {
-  padding-top: 10%;
-
+  margin-top: 10%;
   height: 60%;
   margin-left: auto;
   margin-right: auto;
