--- a/fashion-final-project/src/Components/Footer/Footer.css
+++ b/fashion-final-project/src/Components/Footer/Footer.css
@@ -1,13 +1,13 @@
 .footer {
   height: 5rem;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   background-color: #ec5e54;
   box-shadow: 0 -6px #e48e88;
   justify-content: space-between;
   margin-left: 0;
-  margin-left: 0;
+  margin-right: 0;
   margin-top: 5%;
 }
 .footer > .threads-logo {
@@ -38,7 +38,8 @@
 
 .SM-container {
   padding-right: 5%;
-  display: inline-block;
+  display: flex;
+  align-items: center;
 }
 .SM-container > a {
   color: #f0dcd7;
@@ -47,6 +48,8 @@
   cursor: pointer;
   transform: scale(var(--scale, 1));
   transition: 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
 }
 
 .SM-container a:hover,
@@ -57,17 +60,24 @@
   --scale: 1.3;
 }
 
-@media (max-width: 932px) {
-  .footer-btn > a {
+@media (max-width: 939px) {
+  .footer-btn > h2 {
     color: #f0dcd7;
     padding: 0 2rem;
     cursor: pointer;
     transform: scale(var(--scale, 1));
     transition: 0.3s ease-in-out;
   }
+  .footer-btn {
+    display: flex;
+    font-family: "Style Script";
+    font-size: 1rem;
+    color: #f0dcd7;
+    align-items: center;
+  }
 }
 @media (max-width: 727px) {
-  .footer-btn > a {
+  .footer-btn > h2 {
     color: #f0dcd7;
     padding: 0 1rem;
     cursor: pointer;
@@ -90,12 +100,12 @@
     transition: 0.3s ease-in-out;
   }
 }
-@media (max-width: 548px) {
+@media (max-width: 563px) {
   .footer {
     height: auto;
+    width: 100vw;
     padding-bottom: 3rem;
     padding-top: 1rem;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
