--- a/fashion-final-project/src/Components/ReturnButton/ReturnButton.css
+++ b/fashion-final-project/src/Components/ReturnButton/ReturnButton.css
@@ -3,7 +3,6 @@
   border: none;
 }
 .returnPosition {
-  position: absolute;
-  top: 200px;
-  left: 150px;
+  display: flex;
+  margin-left: 7%;
 }
