--- a/fashion-final-project/src/Components/YourDesign/YourDesign.css
+++ b/fashion-final-project/src/Components/YourDesign/YourDesign.css
@@ -3,27 +3,23 @@ body {
     height: auto;
 }
 
-.return_button_our_design {
-    margin-left: -5%;
-}
-
-.our_design_catalogue {
+.your_design_catalogue {
     display: flex;
     justify-content: flex-start;
     font-family: "Style Script";
     letter-spacing: 3px;
     color: #003D3A;
-    
+    /* margin: 3% 3%; */
+}
+.your_design_catalogue h2 {
+    margin-left: 8%;
+    margin-bottom: 2%;
 }
 
-.our_design_catalogue h2 {
-    margin-left: 3%;
-    margin-bottom: 2% ;
-}
 
-.our_designs_container {
+.your_designs_container {
     width: 85%;
-    height: 75vh;
+    height: 45vh;
     display: flex;
     text-align: center;
     justify-content: space-evenly;
@@ -33,13 +29,9 @@ body {
     align-items: center;
 }
 
-.jumpsuits_box,
-.pants_box,
-.skirts_box,
-.dresses_box,
-.blouses_box,
-.short_box {
-    width: 95%;
+.jumpsuits_box_your_design,
+.dresses_box_your_design {
+    width: 70%;
     height: 55vh;
     display: flex;
     border-radius: 5px;
@@ -48,20 +40,15 @@ body {
     background-position: center;
 }
 
-.jumpsuits_box:hover,
-.pants_box:hover,
-.skirts_box:hover,
-.dresses_box:hover,
-.blouses_box:hover,
-.design_button:hover,
-.short_box:hover {
+.jumpsuits_box_your_design:hover,
+.dresses_box_your_design:hover {
     -moz-box-shadow: 0 0 15px #707070;
     -webkit-box-shadow: 0 0 15px #707070;
     box-shadow: 0 0 10px #707070;
 }
 
-.design_button {
-    width: 95%;
+.design_button_your_design {
+    width: 85%;
     height: 5vh;
     display: flex;
     align-items: center;
@@ -76,8 +63,8 @@ body {
     font-size: 18px;
 }
 
-.clothes_types_container {
-    width: 100%;
+.clothes_types_container_your_design {
+    width: 50%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -85,12 +72,8 @@ body {
     gap: 20px;
 }
 
-.jumpsuits_box img,
-.pants_box img,
-.skirts_box img, 
-.dresses_box img, 
-.blouses_box img,
-.short_box img {
+.jumpsuits_box_your_design img,
+.dresses_box_your_design img {
     width: 100%;
     height: auto;
 }
@@ -100,8 +83,8 @@ body {
 
 /* Extra Large */
 @media (min-width: 1401px) {
-    .our_designs_container {
-        width: 95%;
+    .your_designs_container {
+        width: 85%;
         height: auto;
         display: flex;
         align-items: center;
@@ -110,13 +93,9 @@ body {
         border-radius: 5px;
      
         }
-        .jumpsuits_box,
-        .pants_box,
-        .skirts_box,
-        .dresses_box,
-        .blouses_box, 
-        .short_box {
-            width: 95%;
+        .jumpsuits_box_your_design,
+        .dresses_box_your_design {
+            width: 85%;
             height: auto;
             display: flex;
             flex-direction: column;
@@ -125,8 +104,8 @@ body {
             margin-right: auto;
             border-radius: 5px;
          }
-         .design_button {
-            width: 95%;
+         .design_button_your_design {
+            width: 85%;
             height: 5vh;
             display: flex;
             align-items: center;
@@ -141,7 +120,7 @@ body {
             font-size: 18px;
             margin-bottom: 20px;
         }
-        .jumpsuits_box img {
+        .jumpsuits_box_your_design img {
             width: 100%;
             height: auto;
         }
@@ -150,8 +129,8 @@ body {
 /* Large */
 
 @media (min-width: 1201px) and (max-width: 1400px) {
-    .our_designs_container {
-    width: 95%;
+    .your_designs_container {
+    width: 85%;
     height: auto;
     display: flex;
     align-items: center;
@@ -160,13 +139,9 @@ body {
     border-radius: 5px;
  
     }
-    .jumpsuits_box,
-    .pants_box,
-    .skirts_box,
-    .dresses_box,
-    .blouses_box,
-    .short_box {
-        width: 95%;
+    .jumpsuits_box_your_design,
+    .dresses_box_your_design {
+        width: 85%;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -175,8 +150,8 @@ body {
         margin-right: auto;
         border-radius: 5px;
      }
-     .design_button {
-        width: 95%;
+     .design_button_your_design {
+        width: 85%;
         height: 5vh;
         display: flex;
         align-items: center;
@@ -191,7 +166,7 @@ body {
         font-size: 18px;
         margin-bottom: 20px;
     }
-    .jumpsuits_box img {
+    .jumpsuits_box_your_design img {
         width: 100%;
         height: auto;
     }
@@ -200,7 +175,7 @@ body {
 /* Medium to Large */
 
 @media (min-width: 768px) and (max-width: 1200px) {
-    .our_designs_container {
+    .your_designs_container {
     width: 95%;
     height: auto;
     display: flex;
@@ -211,12 +186,8 @@ body {
     border-radius: 5px;
  
     }
-    .jumpsuits_box,
-    .pants_box,
-    .skirts_box,
-    .dresses_box,
-    .blouses_box,
-    .short_box {
+    .jumpsuits_box_your_design,
+    .dresses_box_your_design {
         width: 95%;
         height: auto;
         display: flex;
@@ -226,7 +197,7 @@ body {
         margin-right: auto;
         border-radius: 5px;
      }
-     .design_button {
+     .design_button_your_design {
         width: 95%;
         height: 5vh;
         display: flex;
@@ -242,18 +213,19 @@ body {
         font-size: 18px;
         margin-bottom: 20px;
     }
-    .jumpsuits_box img {
+    .jumpsuits_box_your_design img {
         width: 100%;
         height: auto;
     }
+    
     /* .jumpsuits_box {
     
     } */
 }
 /* Below medium */
 @media (max-width: 767px) {
-    .our_designs_container {
-        width: 58%;
+    .your_designs_container {
+        width: 100%;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -263,13 +235,9 @@ body {
         border-radius: 5px;
      
         }
-        .jumpsuits_box,
-        .pants_box,
-        .skirts_box,
-        .dresses_box,
-        .blouses_box,
-        .short_box {
-            width: 85%;
+        .jumpsuits_box_your_design,
+        .dresses_box_your_design{
+            width: 100%;
             height: auto;
             display: flex;
             flex-direction: column;
@@ -278,8 +246,8 @@ body {
             margin-right: auto;
             border-radius: 5px;
          }
-         .design_button {
-            width: 85%;
+         .design_button_your_design {
+            width: 100%;
             height: 5vh;
             display: flex;
             align-items: center;
@@ -296,17 +264,18 @@ body {
             
          }
 
-        .jumpsuits_box img {
+        .jumpsuits_box_your_design img {
             width: 100%;
             height: auto;
         }
-        .our_design_catalogue {
+        .your_design_catalogue {
             display: flex;
             justify-content: center;
             margin: 5%;
+            
         }
-
-        .return_button_our_design {
+        .your_design_catalogue h2 {
+            font-size: 25px;
             margin-left: 0;
         }
         /* .jumpsuits_box {
