--- a/fashion-final-project/src/Components/Contact/Contact.css
+++ b/fashion-final-project/src/Components/Contact/Contact.css
@@ -18,20 +18,34 @@
   padding-right: 20px;
   height: 550px;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 767px) {
   .contactText {
-    border: dashed 3px #281e1c8e;
-    border-bottom: 0;
-    height: auto;
+    /* border: dashed 3px #281e1c8e; */
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    height: 570px;
   }
   .contactContainer {
+    border: dashed 3px #281e1c8e;
     height: auto;
   }
+  .contactForm {
+    border: none;
+  }
 }
+
 .contactBtn {
   background-color: #e7bd44;
-  border: dashed 3px #cca532;
   color: #fff;
-  height: 35px;
-  width: 90px;
+  border: none;
+  border-radius: 0.25rem;
+  font-size: 0.75rem;
+  font-weight: bold;
+  padding: 0.75em;
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Montserrat";
+  height: 40px;
+  width: 150px;
 }
