make your design clothes page

--- a/fashion-final-project/src/Components/YourDesign/YourDesign.css
+++ b/fashion-final-project/src/Components/YourDesign/YourDesign.css
@@ -9,7 +9,7 @@ body {
     font-family: "Style Script";
     letter-spacing: 3px;
     color: #003D3A;
-    /* margin: 3% 3%; */
+    margin: 3% 3%; 
 }
 .your_design_catalogue h2 {
     margin-left: 8%;
