--- a/fashion-final-project/src/Components/Footer/Footer.css
+++ b/fashion-final-project/src/Components/Footer/Footer.css
@@ -103,7 +103,8 @@
 @media (max-width: 563px) {
   .footer {
     height: auto;
-    width: 100vw;
+    margin: auto;
+    width: 100%;
     padding-bottom: 3rem;
     padding-top: 1rem;
     display: flex;
