--- a/fashion-final-project/src/Components/Navigation/Navigation.css
+++ b/fashion-final-project/src/Components/Navigation/Navigation.css
@@ -36,10 +36,27 @@
   text-decoration: none;
   font-family: "Style Script";
   font-size: 2.5rem;
+  cursor: pointer;
 }
 .nav-btn:hover {
   color: #e7bd44 !important;
 }
+
+.nav-shoppingBtn {
+  border: none;
+  background-color: #2c6a67;
+  color: #fff;
+  text-decoration: none;
+  font-size: 2.3rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav-shoppingBtn:hover {
+  color: #e7bd44;
+}
+
 .nav-img {
   margin-left: 3rem;
   margin-right: 3rem !important;
@@ -91,6 +108,7 @@
   .L-nav {
     margin-top: 1rem;
     height: 8rem;
+    box-shadow: none;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
@@ -99,6 +117,7 @@
     box-shadow: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    padding-bottom: 0.5rem;
   }
   .nav-toggle > .navbar-toggler-icon {
     background-image: url(../Images/BF-icon.png) !important;
@@ -127,6 +146,20 @@
     cursor: pointer;
   }
   .ColNav-HomeLink:hover {
+    color: #e7bd44;
+  }
+  .nav-shoppingBtn {
+    border: none;
+    background-color: #2c6a67;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .nav-shoppingBtn:hover {
     color: #e7bd44;
   }
 }
