creating show video modals and a picture, adding responsivness to it

--- a/fashion-final-project/src/Components/MagazinePages/Magazine.css
+++ b/fashion-final-project/src/Components/MagazinePages/Magazine.css
@@ -265,4 +265,18 @@
 }
 .selectPrize-btn:hover {
   cursor: pointer;
+  color: #2c6a67;
+}
+
+.MP-tooltip {
+}
+
+.MP-tooltip > .tooltip-inner {
+  font-family: "Montserrat";
+  background-color: #2c6a67;
+  color: #fff;
+}
+
+.MP-tooltip > .tooltip-arrow {
+  display: none;
 }
