--- a/fashion-final-project/src/Components/Measurements/Measurements.css
+++ b/fashion-final-project/src/Components/Measurements/Measurements.css
@@ -31,14 +31,14 @@
   border-top: 0;
 }
 
-.howToPic,
-.howToVideo {
-  width: 90%;
-  /* height: 90%; */
-  height: 500px;
+.howToPic {
+  width: 100%;
+  /* height: 90%; 
+  height: 500px;*/ /*----------------------------*/
   background-color: white;
   border-radius: 5px;
 }
+
 .attBtn {
   background-color: #e7bd44;
   border: none;
@@ -47,7 +47,8 @@
   font-size: 1.1rem;
   font-family: "Montserrat";
   height: 40px;
-  width: 30%;
+  /* width: 30%; */
+  width: 40%; /*--------------------------------------*/
   justify-content: center;
   align-items: center;
   display: flex;
@@ -63,7 +64,33 @@
     border-left: 0;
   }
   .attBtn {
-    height: 40px;
+    height: 50px; /*-------------------------------------*/
     width: 40%;
+  }
+}
+
+/* VIDEO MODAL CSS */
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.modal-backdrop {
+  background-color: transparent;
+}
+
+@media (max-width: 576px) {
+  .video-modalMain > .modal-xl > .modal-content {
+    width: 30%;
+    margin: auto;
   }
 }
