measurements video and picture

--- a/fashion-final-project/src/Components/MagazinePages/Magazine.css
+++ b/fashion-final-project/src/Components/MagazinePages/Magazine.css
@@ -267,7 +267,7 @@
   cursor: pointer;
   color: #2c6a67;
 }
-
+/*
 .MP-tooltip {
 }
 
@@ -280,3 +280,4 @@
 .MP-tooltip > .tooltip-arrow {
   display: none;
 }
+*/
