--- a/fashion-final-project/src/Components/Measurements/Measurements.css
+++ b/fashion-final-project/src/Components/Measurements/Measurements.css
@@ -14,13 +14,11 @@
   text-align: center;
 }
 .measurementForm {
-  /* height: 550px; */
   padding: 20px;
   border-right: 0;
 }
 .measurementHowTo {
   border: dashed 3px #281e1c8e;
-  /* height: 550px; */
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -30,13 +28,18 @@
   border-bottom: 0;
   border-top: 0;
 }
-
+.M-imgBox {
+  overflow: hidden;
+}
 .howToPic {
   width: 100%;
-  /* height: 90%; 
-  height: 500px;*/ /*----------------------------*/
   background-color: white;
   border-radius: 5px;
+  transition: all 2s ease-in-out;
+}
+.howToPic:hover {
+  transform: scale(1.3, 1.3);
+  cursor: pointer;
 }
 
 .attBtn {
@@ -47,8 +50,7 @@
   font-size: 1.1rem;
   font-family: "Montserrat";
   height: 40px;
-  /* width: 30%; */
-  width: 40%; /*--------------------------------------*/
+  width: 40%;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -64,7 +66,7 @@
     border-left: 0;
   }
   .attBtn {
-    height: 50px; /*-------------------------------------*/
+    height: 50px;
     width: 40%;
   }
 }
@@ -84,13 +86,14 @@
   width: 100%;
   height: 100%;
 }
-.modal-backdrop {
-  background-color: transparent;
-}
 
 @media (max-width: 576px) {
   .video-modalMain > .modal-xl > .modal-content {
     width: 30%;
     margin: auto;
   }
+}
+
+.modal-backdrop {
+  background-color: transparent;
 }
