--- a/fashion-final-project/src/Components/MagazinePages/Magazine.css
+++ b/fashion-final-project/src/Components/MagazinePages/Magazine.css
@@ -249,35 +249,39 @@
   font-weight: bold;
 }
 .selectPrize-btn {
-  width: 30%;
-  margin-top: 1rem;
+  display: inline-block;
   text-align: center;
   background-color: #e7bd44;
   color: #fff;
   border: none;
   border-radius: 0.25rem;
   font-size: 0.75rem;
-  font-weight: bold;
   padding: 0.75em;
-  display: inline-block;
   text-decoration: none;
   font-family: "Montserrat";
+  font-weight: bold;
+  width: 30%;
+  margin-top: 1rem;
 }
+
 .selectPrize-btn:hover {
   cursor: pointer;
-  color: #2c6a67;
-}
-/*
-.MP-tooltip {
-}
-
-.MP-tooltip > .tooltip-inner {
-  font-family: "Montserrat";
   background-color: #2c6a67;
-  color: #fff;
 }
 
-.MP-tooltip > .tooltip-arrow {
-  display: none;
+/*
+.selectPrize-btn:active {
+  cursor: pointer;
+  background-color: #0b5ed7;
 }
 */
+.MP-prizeTooltip {
+  font-family: "Montserrat";
+  font-size: 0.75rem;
+}
+.MP-prizeTooltip > .tooltip-arrow {
+  display: none;
+}
+.MP-prizeTooltip > .tooltip-inner {
+  background-color: #5d86bc;
+}
