--- a/fashion-final-project/src/Components/CarouselComponent/CarouselComponentBottom.css
+++ b/fashion-final-project/src/Components/CarouselComponent/CarouselComponentBottom.css
@@ -14,22 +14,22 @@ body {
   align-items: center;
 }
 
-.container {
+.carousel_container_Bottom {
   max-width: 75vw;
   border: dashed #003d3a 1px;
 }
 
-.container .carousel {
+.carousel_container_Bottom .carousel {
   display: flex;
   scroll-behavior: smooth;
   overflow-x: auto;
 }
 
-.container .carousel::-webkit-scrollbar {
+.carousel_container_Bottom .carousel::-webkit-scrollbar {
   display: none;
 }
 
-.container .carousel .item {
+.carousel_container_Bottom .carousel .item {
   background-color: white;
   margin: 10px;
   padding: 10px;
@@ -44,7 +44,7 @@ body {
   display: flex;
 }
 
-.container .carousel .item .image img {
+.carousel_container_Bottom .carousel .item .image img {
   width: 100%;
   height: auto;
   border-radius: 5px;
