--- a/fashion-final-project/src/Components/Measurements/Measurements.css
+++ b/fashion-final-project/src/Components/Measurements/Measurements.css
@@ -42,7 +42,8 @@
   cursor: pointer;
 }
 
-.attBtn {
+.attBtn,
+.attBtn_next {
   background-color: #e7bd44;
   border: none;
   color: #fff;
@@ -55,8 +56,9 @@
   align-items: center;
   display: flex;
   align-self: flex-end;
-  margin-right: 28px;
+  /* margin-right: 28px; */
 }
+
 
 @media only screen and (max-width: 1000px) {
   .measurementHowTo {
