--- a/fashion-final-project/src/Components/MagazinePages/Magazine.css
+++ b/fashion-final-project/src/Components/MagazinePages/Magazine.css
@@ -274,18 +274,38 @@
   cursor: pointer;
   background-color: #0b5ed7;
 }
-*/
-.MP-toastContainer {
-  width: 30%;
-  margin-bottom: 25%;
-  display: flex;
+
+
+
+.MP-toastHeader > .btn-close {
+  display: none;
 }
+.MP-toastContainer {
+  width: 7rem;
+  margin-left: 20px;
+}
+*/
+.MP-Toast {
+  /* position: fixed !important;*/
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  /*margin-top: 20%; */
+  width: 100%;
+}
+
 .MP-toastHeader {
   font-family: "Montserrat";
-  font-size: 0.75rem;
+  font-size: 1.5rem;
   background-color: #5d86bc;
   color: #fff;
-  padding: 0.2rem 0.2rem;
-  text-align: center;
-  padding-left: 0.7rem;
+  /*padding: 2px 1rem; */
+  border: none;
+  border-radius: 7px;
+}
+.MP-toastHeader > .btn-close {
+  display: none;
 }
