--- a/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
+++ b/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
@@ -1,122 +1,29 @@
 body {
     width: 100%;
     height: auto;
+    text-align: center;
 }
 
-.make_your_design_clothes {
+.make_your_clothes_wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Style Script";
-    letter-spacing: 2px;
-    color: #003D3A;
-    font-weight: 100;
-    
-}
-
-.main_container_clothes {
-    width: 80vw;
-    height: 70%;
-    border: dashed 2px;
-    display: flex;
-    margin: 20px;
-    padding: 20px;
-    background-color: white;
-    border-radius: 5px;
     justify-content: center;
-    
 }
-
-.manequin_container {
-    width: 40vw;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-}
-
-.manequin_container img {
-    display: flex;
-    justify-content: flex-start;
-    width: 65%;
-    height: 95%;
-    margin-left: 50px;
-    align-items: center;
-}
-
-.carousels {
+.make_your_clothes_container {
+    min-width: 80vw ;
+    height: auto;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    height: 70%;
-    
-    /* align-items: flex-end; */
-}
-.carousel_container_top,
-.carousel_container_bottom {
-    display: flex;
-    justify-content: flex-start;
-    height: 80%;
+    align-items: center;
+    border: dashed 2px;
+    border-radius: 5px;
 }
 
 /* Media Queries */
 
 /* Medium to Large */
 
-@media (min-width: 768px) and (max-width: 1200px) {
-    .main_container_clothes {
-        width: 85vw;
-        height: 70%;
-        border: dashed 2px;
-        display: flex;
-        justify-content: center;
+/* @media (min-width: 768px) and (max-width: 1200px) {
+    .make_your_clothes_container {
         
     }
-    .manequin_container img {
-    display: flex;
-    justify-content: center;
-    width: 65%;
-    height: 95%;
-    margin-left: 50px;
-    }
-    
-}
-
-/* Medium */
-
-@media (max-width: 767px) {
-    .main_container_clothes {
-        width: 92%;
-        height: 70%;
-        display: flex;
-        justify-content: center;
-    }
-    .make_your_design_clothes h3 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-size: 22px;
-        font-weight: normal;
-        
-    }
-}
-
-/* Extra Small */
-
-@media (max-width: 576px) {
-    .main_container_clothes {
-        width: 92%;
-        height: 70%;
-        display: flex;
-        justify-content: center;
-    }
-    .make_your_design_clothes h3 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-size: 22px;
-        font-weight: normal;
-        
-    }
-    
-}
-
+} */
