--- a/fashion-final-project/src/Components/MakeYourDesignPatterns/MakeYourDesignPatterns.css
+++ b/fashion-final-project/src/Components/MakeYourDesignPatterns/MakeYourDesignPatterns.css
@@ -27,11 +27,11 @@ body {
     
 }
 
-.manequin_container {
+/* .manequin_container {
     width: 40vw;
     height: 100%;
     display: flex;
-    /* justify-content: flex-end; */
+    justify-content: flex-end;
 }
 
 .manequin_container img {
@@ -40,7 +40,7 @@ body {
     width: 65%;
     height: 95%;
     margin-left: 50px;
-}
+} */
 
 .carousels {
     display: flex;
