--- a/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
+++ b/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
@@ -1,105 +1,104 @@
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    width: 100%;
-    min-width: 100vh;
-    background-color:white;
-    color: #2C6A67;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .prints_container {
-    max-width: 75vw;
-    border: dashed #2C6A67 2px;
-    padding: 10px;
-  }
-  
-  .prints_container .carousel {
-    display: flex;
-    scroll-behavior: smooth;
-    overflow-x: auto;
-  }
-  
-  .prints_container .carousel::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .prints_container .carousel .item {
-    background-color: white;
-    margin: 10px;
-    padding: 10px;
-    width: 200px;
-    height:auto;
-    border:solid 1px;
-    border-radius: 5px;
-    flex: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-  }
-
-  .prints_price {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-  }
-  
-  /* .container .carousel .item .image img {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-    border: #707070 2px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    object-fit: cover;
-    
-  } */
-  .buttons,
-  .select_button {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    outline-color: none;
-  }
-
-  .select_button:hover {
-      background-color: #2C6A67;
-  }
-  
-  .select_button:active {
-    background-color: #2C6A67;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-  .buttons_icon {
-    background-color: transparent;
-    border: none;
-    
-  }
-  
-  .buttons_icon:hover {
-    /* background-color: #003d3a31; */
-    /* border: 20x #003d3a31; */
-    border-radius: 50%;
-    cursor: pointer;
-    
-  }
+body {
+  width: 100%;
+  min-width: 100vh;
+  background-color:white;
+  color: #2C6A67;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .prints_image img {
-      display: flex;
-      justify-content: center;
-      border-radius: 5px;
-      width: 120px;
-      height: 110px;
-  }
+.prints_container {
+  max-width: 75vw;
+  border: dashed #2C6A67 2px;
+  padding: 10px;
+}
+
+.prints_container .carousel {
+  display: flex;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+}
+
+.prints_container .carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.prints_container .carousel .item {
+  background-color: white;
+  margin: 10px;
+  padding: 10px;
+  width: 200px;
+  height:auto;
+  border:solid 1px;
+  border-radius: 5px;
+  flex: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.prints_price {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  font-family: "Montserrat";
+}
+
+/* .container .carousel .item .image img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  border: #707070 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  object-fit: cover;
   
+} */
+.buttons,
+.select_button {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  outline-color: none;
   
+}
+
+.select_button:active {
+  background-color: #2C6A67;
+}
+.select_button:active {
+background-color: #3e8e41;
+box-shadow: 0 5px #666;
+transform: translateY(4px);
+}
+
+.buttons_icon {
+  background-color: transparent;
+  border: none;
   
+}
+.buttons_icon:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+.prints_image img {
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    width: 120px;
+    height: 110px;
+}
+
+
