--- a/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
+++ b/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
@@ -7,6 +7,8 @@ body {
 .make_your_clothes_wrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 .make_your_clothes_container {
     min-width: 80vw ;
@@ -16,6 +18,7 @@ body {
     align-items: center;
     border: dashed 2px;
     border-radius: 5px;
+    
 }
 
 /* Media Queries */
