--- a/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
+++ b/fashion-final-project/src/Components/PrintsCarousel/PrintsCarousel.css
@@ -7,12 +7,7 @@
 
 body {
   width: 100%;
-  min-width: 100vh;
-  background-color:white;
-  color: #2C6A67;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: auto;
 }
 
 .prints_container {
