--- a/fashion-final-project/src/Components/ColorsCarousel/ColorsCarousel.css
+++ b/fashion-final-project/src/Components/ColorsCarousel/ColorsCarousel.css
@@ -6,12 +6,7 @@
 
 body {
   width: 100%;
-  min-width: 100vh;
-  background-color:white;
-  color: #2C6A67;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: auto;
   font-family: "Montserrat";
 }
 
