--- a/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
+++ b/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothes.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
 }
 .make_your_clothes_container {
-    min-width: 80vw ;
+    min-width: 80vw;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -21,6 +21,24 @@ body {
 
 /* Media Queries */
 
+@media (min-width: 1200px) {
+    .make_your_clothes_wrapper {
+        display: flex;
+        justify-content: center;
+        
+    }
+    .make_your_clothes_container {
+        min-width: 80vw;
+        padding-right: 2%;
+        padding-left: 2%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+
 /* Medium to Large */
 
 @media (min-width: 768px) and (max-width: 1200px) {
@@ -30,6 +48,7 @@ body {
         
     }
     .make_your_clothes_container {
+        min-width: 90vw;
         padding-right: 2%;
         padding-left: 2%;
         display: flex;
@@ -41,7 +60,7 @@ body {
 }
 
 /* Below medium */
-@media (max-width: 768px) {
+@media (min-width: 649px) and (max-width: 768px) {
     .make_your_clothes_wrapper {
         display: flex;
         justify-content: center;
@@ -51,7 +70,7 @@ body {
         min-width: 100vw;
     }
     .make_your_clothes_container {
-        min-width: 100vw;
+        min-width: 90vw;
         padding-right: 2%;
         padding-left: 2%;
         padding-top: 1%;
@@ -66,7 +85,7 @@ body {
 
 /* Small to medium */
 
-@media (min-width: 300px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 649px) {
     .make_your_clothes_wrapper {
         display: flex;
         justify-content: center;
@@ -79,11 +98,28 @@ body {
         min-width: 100vw;
         /* padding-right: 2%;
         padding-left: 2%; */
+        padding: 1%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+}
+
+@media (max-width: 576px) {
+    .make_your_clothes_wrapper {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-left: 1%;
+        margin-right: 1%;
+        min-width: 100vw;
+    }
+    .make_your_clothes_container {
+        min-width: 100vw;
         padding-top: 1%;
         display: flex;
         justify-content: center;
         align-items: center;
-        /* margin-left: 2%; 
-        margin-right: 2%;  */
-    }
+    } 
 }
