--- a/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothesTop.css
+++ b/fashion-final-project/src/Components/MakeYourDesignClothes/MakeYourDesignClothesTop.css
@@ -121,7 +121,12 @@ body {
 /* Media Queries */
 
 /* Below medium */
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
+
+  .container_carousel_top {
+    max-width: 52vw;
+   
+  }
 #manequin_container_top {
   width: 98%;
   height: auto;
@@ -135,30 +140,53 @@ body {
 }
 }
 
-@media (max-width: 768px) {
-.manequin_container_bottom {
+@media (max-width: 992px) {
+#manequin_container_top {
   width: 98%;
   height: auto;
   display: flex;
   justify-content: center;
   
 }
-.manequin_container_bottom img {
+#manequin_container_top img {
   width: 300px;
   height: auto;
 }
 }
 
-@media (min-width: 300px) and (max-width: 768px) {
-.manequin_container_bottom {
+@media (min-width: 649px) and (max-width: 768px) {
+#manequin_container_top {
   width: 98%;
   height: auto;
   display: flex;
   justify-content: center;
   
 }
-.manequin_container_bottom img {
+#manequin_container_top img {
   width: 260px;
   height: auto;
 }
+}
+
+@media (min-width: 576px) and (max-width: 649px) {
+  #manequin_container_top {
+    width: 98%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    
+  }
+  #manequin_container_top img {
+    width: 250px;
+    height: auto;
+  }
+
+}
+
+@media (max-width: 576px) {
+  .container_carousel_top {
+    max-width: 35vw;
+    padding: 1%;
+    margin-left: 4%;
+  }
 }
